--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Onest:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Signin Screen</title>
+    <title>Application</title>
   </head>
   <body>
     <div id="root"></div>
